[tool.poetry]
name = "backcountry_mtn_us"
version = "0.1.0"
description = "Python package that looks at weather conditions for backcountry activities in the US."
authors = ["Andrew <ael2193@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
pandas = "^1.1.5"
numpy = "^1.19.4"
simplejson = "^3.17.2"

[tool.poetry.dev-dependencies]
Sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"
pytest = "^6.2.1"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
